IPtablesbackup.txt
# Generated by iptables-save v1.8.4 on Sun May  2 23:35:53 2021
*filter
:INPUT ACCEPT [449132:633252250]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [235584:14631703]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o br-5495235af1cb -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-5495235af1cb -j DOCKER
-A FORWARD -i br-5495235af1cb ! -o br-5495235af1cb -j ACCEPT
-A FORWARD -i br-5495235af1cb -o br-5495235af1cb -j ACCEPT
-A FORWARD -o br-8832163fb303 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-8832163fb303 -j DOCKER
-A FORWARD -i br-8832163fb303 ! -o br-8832163fb303 -j ACCEPT
-A FORWARD -i br-8832163fb303 -o br-8832163fb303 -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i br-5495235af1cb ! -o br-5495235af1cb -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-8832163fb303 ! -o br-8832163fb303 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o br-5495235af1cb -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-8832163fb303 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Sun May  2 23:35:53 2021
# Generated by iptables-save v1.8.4 on Sun May  2 23:35:53 2021
*nat
:PREROUTING ACCEPT [253:76405]
:INPUT ACCEPT [2:286]
:OUTPUT ACCEPT [444:29283]
:POSTROUTING ACCEPT [444:29283]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.21.0.0/16 ! -o br-5495235af1cb -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/16 ! -o br-8832163fb303 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/32 -d 0.0.0.0/32 -p tcp -m tcp --dport 25565 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/32 -p tcp -m tcp --dport 25565 -j MASQUERADE
-A DOCKER -i br-5495235af1cb -j RETURN
-A DOCKER -i br-8832163fb303 -j RETURN
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sun May  2 23:35:53 2021
